@@ -25,6 +25,13 @@
   </dependencyManagement>
  
   <dependencies>
+
+    <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+      <version>4.7.7</version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -56,10 +63,19 @@
         </configuration>
       </plugin>
 
-      <!--<plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.2</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jlink-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.3.0</version>
         <extensions>true</extensions>
         <executions>
           <execution>
@@ -68,15 +84,18 @@
               <goal>jlink</goal>
             </goals>
             <configuration>
+              <classifier>jlink</classifier>
               <noHeaderFiles>true</noHeaderFiles>
               <noManPages>true</noManPages>
               <stripDebug>true</stripDebug>
-              <launcher>jlox=org.iqraalabs.jlox/org.levelup.jlox.Main</launcher>
-              <classifier>linux</classifier>
+              <launcher>jlox=me.moamenhredeen.jlox/me.moamenhredeen.jlox.Main</launcher>
+              <addOptions>
+                <addOption>--enable-preview</addOption>
+              </addOptions>
             </configuration>
           </execution>
         </executions>
-      </plugin>-->
+      </plugin>
     </plugins>
   </build>
 
